# tgi-ground-truth-corpus

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  book.toml
.pmat/: project.toml
benches/: attention_bench.rs  batching_bench.rs  kv_cache_bench.rs  sampling_bench.rs  tokenizer_bench.rs
book/src/: SUMMARY.md  introduction.md
book/src/examples/: basic_router.md  continuous_batching.md  inference_backend.md  quantization.md  request_validation.md  scheduler.md  streaming_sse.md
book/src/patterns/: batching.md  inference.md  quantization.md  router.md  scheduling.md  streaming.md  validation.md
book/src/reference/: api.md  sovereign_stack.md  tgi_mapping.md
examples/: basic_router.rs  continuous_batching.rs  inference_backend.rs  quantization.rs  request_validation.rs  safetensors_inference.rs  scheduler.rs  streaming_sse.rs
src/: attention.rs  batching.rs  chunked_prefill.rs  error.rs  grammar.rs  inference.rs  kv_cache.rs  lib.rs  lora.rs  metrics.rs  prefix_cache.rs  profiling.rs  quantization.rs  router.rs  sampling.rs  scheduling.rs  speculation.rs  stack.rs  streaming.rs  tokenizer.rs  tools.rs  validation.rs  vision.rs  warmup.rs  watermark.rs
