[package]
name = "tgi-ground-truth-corpus"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["PAIML <engineering@paiml.com>"]
license = "Apache-2.0"
description = "Ground truth corpus of TGI inference patterns for Sovereign AI Stack conversion"
repository = "https://github.com/paiml/tgi-ground-truth-corpus"
keywords = ["inference", "llm", "tgi", "huggingface", "ml"]
categories = ["science", "machine-learning"]

[lib]
name = "tgi_gtc"
path = "src/lib.rs"

[dependencies]
# Sovereign AI Stack (versions from crates.io)
trueno = { version = "0.14", optional = true }
# aprender = "0.25"    # Add when needed
# realizar = "0.6"     # Add when needed

# Model loading
safetensors = { version = "0.7", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

# Minimal dependencies for pattern documentation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
# Testing
proptest = "1.6"
tokio-test = "0.4"
criterion = { version = "0.6", features = ["html_reports"] }

# Benchmarks and examples added when implemented

[features]
default = []
full = ["gpu", "quantization", "inference"]
gpu = []
quantization = []
inference = ["dep:trueno", "dep:safetensors", "dep:bytemuck"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
